@@ -22,6 +22,8 @@ Changes in Shorewall 4.4.2
 
 10) Add -<family> to 'ip route del default' command.
 
+11) Add three new columns to macro body.
+
 Changes in Shorewall 4.4.1
 
 1)  Deleted extra 'use ...IPAddrs.pm' from Nat.pm.
